// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructLayoutEngine browser can process the dom elements fixture 1`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  />
  <span>
    <!-- The footer -->
    <footer>
      <a
        href="/about"
      >
        About
      </a>
    </footer>
  </span>
</body>
`;

exports[`constructLayoutEngine browser can process the dom elements fixture 2`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  >
    <button>
      Top level content
    </button>
    <div
      id="single-spa-application:app1"
    />
    <!-- Comments and raw text should work -->
    
          Some raw text
        
  </div>
  <span>
    <!-- The footer -->
    <footer>
      <a
        href="/about"
      >
        About
      </a>
    </footer>
  </span>
</body>
`;

exports[`constructLayoutEngine browser can process the dom elements fixture 3`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  />
  <span>
    <!-- The footer -->
    <footer>
      <a
        href="/about"
      >
        About
      </a>
    </footer>
  </span>
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 1`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 2`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <div
    id="single-spa-application:@org/settings"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 3`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 4`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <aside>
    <div
      id="single-spa-application:@org/main-sidenav"
    />
  </aside>
  <div
    id="single-spa-application:@org/app1"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 5`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 6`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <aside>
    <div
      id="single-spa-application:@org/main-sidenav"
    />
  </aside>
  <div
    id="single-spa-application:@org/app2"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the layout in the medium.html fixture 7`] = `
<body>
  <div
    id="single-spa-application:@org/navbar"
  />
  <aside>
    <div
      id="single-spa-application:@org/main-sidenav"
    />
  </aside>
  <div
    id="single-spa-application:@org/app1"
  />
  <div
    id="single-spa-application:@org/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can process the nested-default-route fixture 1`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  >
    <span>
      <div
        id="single-spa-application:not-found"
      />
    </span>
  </div>
</body>
`;

exports[`constructLayoutEngine browser can process the nested-default-route fixture 2`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  >
    <div
      id="single-spa-application:settings-not-found"
    />
    <span />
  </div>
</body>
`;

exports[`constructLayoutEngine browser can process the nested-default-route fixture 3`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  >
    <div
      id="single-spa-application:app1"
    />
    <span />
  </div>
</body>
`;

exports[`constructLayoutEngine browser can render dom elements from json 1`] = `
<body>
  <div
    class="before"
  />
  <div
    id="single-spa-application:app1"
  />
  <div
    class="after"
  />
</body>
`;

exports[`constructLayoutEngine browser can show a loader properly 1`] = `<body />`;

exports[`constructLayoutEngine browser can show a loader properly 2`] = `
<body>
  <div
    id="single-spa-application:app1"
    style="display: none;"
  >
    <img
      src="loading.gif"
    />
  </div>
</body>
`;

exports[`constructLayoutEngine browser can show a loader properly 3`] = `
<body>
  <div
    id="single-spa-application:app1"
  />
</body>
`;

exports[`constructLayoutEngine browser can show a loader properly 4`] = `
<body>
  <div
    id="single-spa-application:app1"
  />
</body>
`;

exports[`constructLayoutEngine browser can successfully construct a layout engine and respond to routing events 1`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can successfully construct a layout engine and respond to routing events 2`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/app1"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can successfully construct a layout engine and respond to routing events 3`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can successfully rearrange dom elements during route transitions 1`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/app1"
  />
  <div
    id="single-spa-application:@org-name/app2"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can successfully rearrange dom elements during route transitions 2`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/app2"
  />
  <div
    id="single-spa-application:@org-name/app1"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser can successfully rearrange dom elements during route transitions 3`] = `
<body>
  <div
    id="single-spa-application:@org-name/header"
  />
  <div
    id="single-spa-application:@org-name/app1"
  />
  <div
    id="single-spa-application:@org-name/app2"
  />
  <div
    id="single-spa-application:@org-name/footer"
  />
</body>
`;

exports[`constructLayoutEngine browser error handling shows an error UI when an application goes into SKIP_BECAUSE_BROKEN status 1`] = `
<body>
  <div
    id="single-spa-application:app1"
  >
    <div>
      Oops, app1 is broken
    </div>
  </div>
</body>
`;

exports[`constructLayoutEngine browser error handling works with a parcel provided for the error UI 1`] = `
<body>
  <div
    id="single-spa-application:app1"
  >
    <div>
      App 1 is broken (parcel)
    </div>
  </div>
</body>
`;

exports[`constructLayoutEngine browser error handling works with error handlers defined in HTML 1`] = `
<body>
  <div
    id="single-spa-application:header"
  />
  <div
    class="main-content"
  >
    <div
      id="single-spa-application:app1"
    >
      <div>
        Oops! An error occurred!
      </div>
    </div>
  </div>
</body>
`;
